<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/video"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@android:color/black"/>

    <Button
            android:id="@+id/play"
            style="@style/ButtonPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/play_video"/>

    <Button
            android:id="@+id/gallery"
            style="@style/ButtonPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/gallery"/>

    <Button
            android:id="@+id/camera"
            style="@style/ButtonPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/camera"/>

    <Button
            android:id="@+id/galleryMulti"
            style="@style/ButtonPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/gallery_multi"/>

</LinearLayout>