<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:id="@+id/scrollView"
            android:orientation="vertical"
            android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

        <TextView
                style="@style/Header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/welcome"
                />

        <TextView
                style="@style/Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/welcome_message"
                />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

            <TextView
                    android:id="@+id/exampleContentNumber"
                    style="@style/Body"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:text="0"
            />

            <Button
                    style="@style/ButtonPrimary"
                    android:id="@+id/exampleContentIncrement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/increment_the_number"
            />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

            <TextView
                    android:id="@+id/chainedNumber"
                    style="@style/Body"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:text="0"
            />

            <Button
                    style="@style/ButtonPrimary"
                    android:id="@+id/chainedIncrement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/increment_the_number"
            />
        </LinearLayout>

        <ImageView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:src="@drawable/reason_expertise"/>

        <Button
                style="@style/ButtonPrimary"
                android:id="@+id/scrollToTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="Scroll to Top"
        />

    </LinearLayout>

</ScrollView>
