<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
        >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            >

        <TextView
                style="@style/Header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/welcome_to_switch_town"
                />

        <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/lorem_ipsum"
                android:gravity="top"
                />

        <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/lorem_ipsum"
                android:gravity="top"
                />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >

            <TextView
                    style="@style/Body"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Test Check"
                    />

            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="top"
                    />
        </LinearLayout>

        <TextView
                style="@style/Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/text_field"
                />

        <EditText
                android:id="@+id/editableText"
                style="@style/Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:minHeight="40dp"
                android:padding="8dp"
                android:background="@drawable/border"
                />

        <EditText
                android:id="@+id/numberText"
                style="@style/Body"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:minHeight="40dp"
                android:padding="8dp"
                android:background="@drawable/border"
                />

        <AutoCompleteTextView
                android:id="@+id/editableAutoText"
                style="@style/Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:minHeight="40dp"
                android:padding="8dp"
                android:background="@drawable/border"
                />

        <TextView
                android:id="@+id/editableTextCopy"
                style="@style/Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_margin="8dp"
                android:text=""
                />

        <EditText
                android:id="@+id/editableTextBig"
                style="@style/Body"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:background="@drawable/border"
                />

        <Spinner
                android:id="@+id/spinner"
                style="@style/Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/border"
                app:entryPadding="20dp"
                />

    </LinearLayout>
</ScrollView>
